--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "alt": "^0.17.9",
     "autoprefixer": "^6.1.2",
     "babel-core": "5.6.18",
     "babel-eslint": "^4.1.6",
@@ -23,9 +24,9 @@
     "lost": "^6.6.2",
     "postcss-loader": "^0.8.0",
     "precss": "^1.3.0",
-    "react-hot-loader": "^1.3.0",
-    "react-mixin": "^3.0.3",
-    "react-mixin-decorator": "^1.1.3",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-router": "^1.0.1",
     "reqwest": "^2.0.5",
     "style-loader": "^0.13.0",
     "webpack": "1.12.1",
