--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
     "eslint-loader": "^1.1.1",
     "events": "^1.1.0",
     "flux": "^2.1.1",
+    "history": "~1.13.x",
     "html-webpack-plugin": "^1.6.0",
     "jwt-decode": "^1.4.0",
     "lost": "^6.6.2",
+    "node-sass": "^3.4.2",
+    "postcss--url": "^1.0.0",
+    "postcss-inline-comment": "^2.0.0",
     "postcss-loader": "^0.8.0",
+    "postcss-scss": "^0.1.3",
     "precss": "^1.3.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.1",
+    "react-router": "^1.0.2",
     "reqwest": "^2.0.5",
+    "sass": "^0.5.0",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "1.12.1",
     "webpack-dev-server": "1.12.1",
@@ -35,7 +42,7 @@
   },
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --profile --colors",
-    "watch": "webpack-dev-server --hot --inline --progress --colors",
+    "watch": "webpack-dev-server --inline --progress --colors",
     "test": "echo \"No unit tests and e2e tests yet\" && exit 1"
   },
   "repository": {
