--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-scss": "^0.1.3",
     "precss": "^1.3.0",
     "react": "^0.14.3",
+    "react-chartjs": "^0.6.0",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.2",
     "reqwest": "^2.0.5",
