--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "babel-runtime": "^6.3.13",
     "css-loader": "^0.23.0",
     "cssnext": "^1.8.4",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.1.1",
     "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.13.0",
     "events": "^1.1.0",
     "flux": "^2.1.1",
     "history": "~1.13.x",
@@ -24,7 +27,6 @@
     "jwt-decode": "^1.4.0",
     "lost": "^6.6.2",
     "node-sass": "^3.4.2",
-    "postcss--url": "^1.0.0",
     "postcss-inline-comment": "^2.0.0",
     "postcss-loader": "^0.8.0",
     "postcss-scss": "^0.1.3",
@@ -32,6 +34,7 @@
     "react": "^0.14.3",
     "react-chartjs": "^0.6.0",
     "react-dom": "^0.14.3",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.2",
     "reqwest": "^2.0.5",
     "sass": "^0.5.0",
