update dependencies and webpack conf

--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "jwt-decode": "^1.4.0",
     "lost": "^6.6.2",
     "node-sass": "^3.4.2",
+    "postcss-cssnext": "^2.3.0",
+    "postcss-import-url": "^1.0.0",
     "postcss-inline-comment": "^2.0.0",
     "postcss-loader": "^0.8.0",
+    "postcss-normalize": "^0.1.2",
     "postcss-scss": "^0.1.3",
     "precss": "^1.3.0",
     "react": "^0.14.3",
