--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "devDependencies": {
     "alt": "^0.17.9",
     "autoprefixer": "^6.1.2",
-    "babel-core": "5.6.18",
+    "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
-    "babel-loader": "^5.3.1",
-    "babel-runtime": "^6.3.13",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^6.3.19",
     "css-loader": "^0.23.0",
     "cssnext": "^1.8.4",
     "eslint": "^1.10.3",
@@ -25,6 +30,7 @@
     "history": "~1.13.x",
     "html-webpack-plugin": "^1.6.0",
     "jwt-decode": "^1.4.0",
+    "lodash": "^3.10.1",
     "lost": "^6.6.2",
     "node-sass": "^3.4.2",
     "postcss-cssnext": "^2.3.0",
