--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-  presets: ['es2015', 'stage-0', 'react'],
-  plugins: [
-    'transform-runtime',
-    'transform-decorators-legacy'
-  ]
+  presets: ['es2015', 'stage-1', 'react'],
+  plugins: ["transform-runtime"]
 }
