--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "devDependencies": {
     "alt": "^0.17.9",
     "autoprefixer": "^6.1.2",
+    "babel": "^6.3.26",
     "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -26,12 +26,14 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.0",
     "events": "^1.1.0",
+    "expect.js": "^0.3.1",
     "flux": "^2.1.1",
     "history": "~1.13.x",
     "html-webpack-plugin": "^1.6.0",
     "jwt-decode": "^1.4.0",
     "lodash": "^3.10.1",
     "lost": "^6.6.2",
+    "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
     "postcss-cssnext": "^2.3.0",
     "postcss-import-url": "^1.0.0",
@@ -55,8 +57,7 @@
   },
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --profile --colors",
-    "watch": "webpack-dev-server --inline --progress --colors",
-    "test": "echo \"No unit tests and e2e tests yet\" && exit 1"
+    "watch": "NODE_ENV=development webpack-dev-server --inline --progress --colors"
   },
   "repository": {
     "type": "git",
