--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {},
   "devDependencies": {
     "alt": "^0.17.9",
+    "alt-router": "^1.2.0",
     "autoprefixer": "^6.1.2",
     "babel": "^6.3.26",
     "babel-core": "^6.3.26",
@@ -19,6 +20,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "chart.js": "^1.0.2",
     "css-loader": "^0.23.0",
     "cssnext": "^1.8.4",
     "eslint": "^1.10.3",
@@ -28,7 +30,7 @@
     "events": "^1.1.0",
     "expect.js": "^0.3.1",
     "flux": "^2.1.1",
-    "history": "~1.13.x",
+    "history": "^1.17.0",
     "html-webpack-plugin": "^1.6.0",
     "jwt-decode": "^1.4.0",
     "lodash": "^3.10.1",
@@ -51,7 +53,7 @@
     "sass": "^0.5.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "webpack": "1.12.1",
+    "webpack": "^1.12.9",
     "webpack-dev-server": "1.12.1",
     "when": "^3.7.5"
   },
